--- a/src/Styles/Content.css
+++ b/src/Styles/Content.css
@@ -1,16 +1,8 @@
 .content-container{
     margin: 0px;
-    padding: 16px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
-
-.banner-container{
-    padding: 10px;
-}
-
 
 .article-div{
     background-color: olive;
@@ -21,18 +13,23 @@
 
 
 .banner-container{
-    width: 63rem;
+    width: 100%;
+    max-width: 63rem;
+    margin: 0 auto;
 }
+.banner-div{
+    padding: 1rem;
 
-
+}
 
 
 
 
 /* Article layout for screens < 500px (default)*/
 .articles-container{
+    margin: 0 auto;
     max-width: 63rem;
-    padding: 10px;
+    padding: 1rem;
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-template-areas: 
@@ -91,10 +88,6 @@
 /* Article layout for screens > 900px */
 @media only screen and (min-width:900px) {
 
-    .content-container{
-        margin-left: 5%;
-        margin-right: 5%;
-    }
     .articles-container{
     grid-template-columns: repeat(4, minmax(0, 1fr));
     grid-template-areas: 
